[package]
name = "mscheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0"
mongodb = { version = "2", features = [] }
serde = "1"
tokio = { version = "1", features = ["signal"] }
tokio-util = { version = "0", features = ["time"] }
tracing = { version = "0", features = ["log"] }
futures = "0"
strum = { version = "0", features = ["derive"] }
[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0"
test-log = "0"
tracing-subscriber = { version = "0", default-features = false, features = ["env-filter", "fmt"] }